# pyhdltypes

./: .check-reqs.txt  .codecov.yml  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .test-reqs.txt  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: publish.yaml  tests.yaml
docs/: conf.py  contents.rst  index.rst  reference.rst  requirements.txt  spelling_wordlist.txt
src/hdltypes/: __init__.py  array.py  compat.py  integer.py  logic.py  logic_array.py  range.py  types.py  version.py
tests/: test_array.py  test_hdltypes.py  test_logic.py  test_logic_array.py  test_range.py
typesafety/: test_logic.yaml  test_types.yaml
