[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = '^build/'   # /build/ is output of `pip install .`
                      # Must exclude it since pre-commit does not stash it

# strictness flags
strict = true

# formatting flags
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]  # mypy doesn't like docs/conf.py
module = 'docs.conf'
ignore_errors = true

[tool.black]

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",                           # must specify this since adding others overrides defaults
    "@(?:abc\\.)?abstract(?:method|property|classmethod|staticmethod)",  # skip abstract functions
    "@(?:typing\\.)?overload",                    # skip overloads lines
    "if\\s+(not)?\\s+(typing\\.)?TYPE_CHECKING:"  # skip TYPE_CHECKING blocks
]
